# add_cross_compile

./: CMakeLists.txt  README.md
test/: main.cpp
